<resources>
    <string name="app_name">SpeakerReader</string>
    <string name="fileChooseButtonText">请选择您想打开的文件</string>
    <string name="welcomeWords">欢迎使用本app</string>
    <string name="or">OR</string>
    <string name="scanFilesButton">扫描本地所有支持文件</string>
    <string name="record">累了，看会儿新闻</string>
    <string name="backToPre">返回上一层</string>
    <string name="deleteItem">删除记录</string>
    <string name="cleanAll">清空记录</string>
    <string name="openRecord">打开</string>

    <string name="settingMenu">设置</string>
    <string name="lightAdjust">亮度调节</string>
    <string name="sizeChosen">字号</string>
    <string name="backgroundSelector">背景选择</string>
    <string name="fitSystemLightness">跟随系统</string>
    <string name="textSizePlus">A+</string>
    <string name="textSizeMinus">A-</string>
    <string name="searchViewName">结果中搜索</string>
    <string name="searchTip">输入文件名</string>
    <string name="other_setting">返回上个位置</string>
    <string name="content_input_tip">请输入要搜索的内容</string>
    <string name="search_button">搜索</string>
    <string name="search_root_file">搜索本机文件</string>
    <string name="title_activity_search_file">SearchFileActivity</string>
    <string name="search_file_name_input_hint">请输入要搜索的文件名</string>
</resources>
