<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcomeWords"
        android:textSize="20sp" />

    <Button
        android:id="@+id/fileChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fileChooseButtonText" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textSize="20sp" />

    <Button
        android:id="@+id/scanFiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/scanFilesButton" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recored"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recoredList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
