<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:background="@color/activity_background"
    android:paddingEnd="@dimen/activity_padding_side"
    android:paddingStart="@dimen/activity_padding_side">
    <android.support.v7.widget.Toolbar
        android:id="@+id/welcome_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bar_background"
       android:paddingBottom="2dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:weightSum="1">
        <TextView
            android:id="@+id/search_file"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="#ffffff"
            android:drawableStart="@mipmap/ic_launcher_round"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:text="@string/search_root_file"
            android:layout_weight="0.18" />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="94dp"
        android:orientation="horizontal">
        <TextView
            android:background="#ffffff"
            android:gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/file_choose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/fileChooseButtonText"
            android:layout_weight="1"/>
        <!--<View-->
            <!--android:background="#000000"-->
            <!--android:layout_width="1dp"-->
            <!--android:layout_marginBottom="10dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_height="match_parent"/>-->

        <TextView
            android:background="#ffffff"
            android:gravity="center"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:id="@+id/scan_files"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/scanFilesButton" />

    </LinearLayout>


    <TextView
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="50dp"
        android:text="@string/record"
        android:gravity="center"
        android:drawableEnd="@drawable/right_arrow"
        android:textSize="20sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/record_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
